# marne-bot

./: .gitignore  Cargo.toml  Dockerfile  Readme.md
.github/workflows/: main.yml  rust.yml
src/: main.rs
